# Bandhu

./: .gitignore  .prettierrc.json  ARCHITECTURE.md  GUIDE.md  LICENSE  README.md  ROADMAP.md  TODO  update_roadmap.py
backend/: .env.example  Cargo.toml  rustfmt.toml
backend/src/: applypatch.rs  buildloop.rs  buildtool.rs  commandtool.rs  config.rs  context.rs  diff.rs  error.rs  gate.rs  listdir.rs  main.rs  model.rs  queue.rs  readfile.rs  registry.rs  runcommand.rs  search.rs  testloop.rs  testrunner.rs  tool.rs  writefile.rs
bandhu/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
bandhu/docs/: config.md
bandhu/src/: api.ts  approval.ts  chatui.ts  config.ts  controller.ts  extension.ts  report.ts  status.ts  types.ts
docs/: approval.md  backend.md  buildloop.md  config.md  diff.md  extension.md  report.md  tools-modules.md  tools.md
experiments/: cancel  e2e_test.sh  verify
scripts/: lint.sh  run_bandhu.sh
